@@ -572,6 +572,25 @@ $(document).ready(function() {
 			</tr>
 		</table>
 	</div>
+	<div id="falmec_popup" class="ui-popup ui-body-b ui-overlay-shadow ui-corner-all pop">
+		<div class="ui-close" onclick="CloseFalmecPopup()"></div>
+		<table class="display" border="0" cellpadding="0" cellspacing="0">
+			<tr>
+				<td>
+					<center>
+						<br><br>
+						<button class="btn btn-info" onclick="FalmecSendCommand('light on')"><span data-i18n="Light">Light</span>&nbsp;<span data-i18n="On">On</span></button><br>
+						<button class="btn btn-info" onclick="FalmecSendCommand('light off')"><span data-i18n="Light">Light</span>&nbsp;<span data-i18n="Off">Off</span></button><br>
+						<button class="btn btn-info" onclick="FalmecSendCommand('speed 1')"><span data-i18n="Speed"></span>&nbsp;1</button><br>
+						<button class="btn btn-info" onclick="FalmecSendCommand('speed 2')"><span data-i18n="Speed"></span>&nbsp;2</button><br>
+						<button class="btn btn-info" onclick="FalmecSendCommand('speed 3')"><span data-i18n="Speed"></span>&nbsp;3</button><br>
+						<button class="btn btn-info" onclick="FalmecSendCommand('speed 4')"><span data-i18n="Speed"></span>&nbsp;4</button><br>
+					</center>
+					<br>
+				</td>
+			</tr>
+		</table>
+	</div>
 	<div id="dialog-camera-live" style="display:none;">
 		<img id="camfeed" name="camfeed" onload="load_cam_video()" src="images/camera_default.png" width="600" height="337" style="border: 1px solid #1E2832;">
 	</div>
