@@ -6276,6 +6276,71 @@ function ShowLucciDCPopup(event, idx, Protected, ismobile) {
     });
 }
 
+//Falmec
+function CloseFalmecPopup() {
+    $("#falmec_popup").hide();
+}
+
+function FalmecSendCommand(falmec_cmnd) {
+	var switchcmd = falmec_cmnd;
+	$("#falmec_popup").hide();
+	SwitchLight($.devIdx, switchcmd, $.Protected);
+}
+
+function ShowFalmecPopupInt(mouseX, mouseY, idx, ismobile) {
+	$.devIdx = idx;
+
+	if (typeof ismobile == 'undefined') {
+		$("#falmec_popup").css({
+			"top": mouseY,
+			"left": mouseX + 15,
+			"position": "absolute",
+			"-ms-transform": "none",
+			"-moz-transform": "none",
+			"-webkit-transform": "none",
+			"transform": "none"
+		});
+	}
+	else {
+		$("#falmec_popup").css({
+			"position": "fixed",
+			"left": "50%",
+			"top": "50%",
+			"-ms-transform": "translate(-50%,-50%)",
+			"-moz-transform": "translate(-50%,-50%)",
+			"-webkit-transform": "translate(-50%,-50%)",
+			"transform": "translate(-50%,-50%)"
+		});
+	}
+	$('#falmec_popup').i18n();
+	$("#falmec_popup").show();
+}
+
+function ShowFalmecPopup(event, idx, Protected, ismobile) {
+	event = event || window.event;
+	// If pageX/Y aren't available and clientX/Y are,
+	// calculate pageX/Y - logic taken from jQuery.
+	// (This is to support old IE)
+	if (event.pageX == null && event.clientX != null) {
+		eventDoc = (event.target && event.target.ownerDocument) || document;
+		doc = eventDoc.documentElement;
+		body = eventDoc.body;
+
+		event.pageX = event.clientX +
+			(doc && doc.scrollLeft || body && body.scrollLeft || 0) -
+			(doc && doc.clientLeft || body && body.clientLeft || 0);
+		event.pageY = event.clientY +
+			(doc && doc.scrollTop || body && body.scrollTop || 0) -
+			(doc && doc.clientTop || body && body.clientTop || 0);
+	}
+	var mouseX = event.pageX;
+	var mouseY = event.pageY;
+
+	HandleProtection(Protected, function () {
+		ShowFalmecPopupInt(mouseX, mouseY, idx, ismobile);
+	});
+}
+
 function MakeDatatableTranslations() {
 	$.DataTableLanguage = {};
 	$.DataTableLanguage["search"] = $.t("Search") + "&nbsp;:";
